# embree

./: .dir-locals.el
common/algorithms/: CMakeLists.txt  parallel_for_for.h  parallel_sort.h
common/cmake/: tutorial.cmake
common/math/: linearspace3.h  math.h  vec3.h  vec3fa.h
common/simd/: avx.h  avx512.h  simd.h  varying.h  vboold4_avx.h  vboold4_avx512.h  vboolf4_sse2.h  vfloat16_avx512.h  vfloat4_sse2.h  vfloat8_avx.h  vint8_avx.h
include/embree3/: rtcore.h  rtcore_builder.h  rtcore_common.h  rtcore_device.h  rtcore_geometry.h  rtcore_ray.h  rtcore_scene.h  rtcore_scene.isph
kernels/: CMakeLists.txt
kernels/builders/: bvh_builder_morton.h  bvh_builder_msmblur.h  bvh_builder_sah.h  heuristic_binning.h  heuristic_binning_array_aligned.h  priminfo.h  primrefgen.cpp  primrefgen.h  splitter.h
kernels/bvh/: bvh.cpp  bvh.h  bvh4_factory.cpp  bvh4_factory.h  bvh8_factory.cpp  bvh8_factory.h  bvh_builder.cpp  bvh_builder.h  bvh_builder_morton.cpp  bvh_builder_sah.cpp  bvh_builder_sah_spatial.cpp  bvh_builder_subdiv.cpp  bvh_builder_twolevel.cpp  bvh_factory.h  bvh_intersector1.cpp  bvh_intersector1.h  bvh_intersector1_bvh4.cpp  bvh_intersector1_bvh8.cpp  bvh_intersector_hybrid.cpp  bvh_intersector_hybrid.h  bvh_intersector_hybrid16_bvh4.cpp  bvh_intersector_hybrid16_bvh8.cpp  bvh_intersector_hybrid4_bvh4.cpp  bvh_intersector_hybrid4_bvh8.cpp  bvh_intersector_hybrid8_bvh4.cpp  bvh_intersector_hybrid8_bvh8.cpp  bvh_intersector_stream.cpp  bvh_intersector_stream.h  bvh_intersector_stream_bvh4.cpp  bvh_intersector_stream_bvh8.cpp  bvh_intersector_stream_filters.cpp  bvh_intersector_stream_filters.h  bvh_refit.cpp  bvh_refit.h  bvh_statistics.cpp  bvh_statistics.h  bvh_traverser1.h  node_intersector1.h  node_intersector_packet.h
kernels/common/: accel.h  acceln.cpp  acceln.h  builder.h  context.h  default.h  device.cpp  geometry.h  isa.h  ray.h  rtcore.cpp  rtcore.h  rtcore_builder.cpp  scene.cpp  scene.h  scene_curves.cpp  scene_grid_mesh.cpp  scene_instance.cpp  scene_line_segments.cpp  scene_line_segments.h  scene_points.cpp  scene_quad_mesh.cpp  scene_quad_mesh.h  scene_subdiv_mesh.cpp  scene_triangle_mesh.cpp  scene_triangle_mesh.h  scene_user_geometry.cpp  state.cpp  state.h
kernels/geometry/: curveNi.h  curve_intersector_ribbon.h  curve_intersector_virtual.cpp  curve_intersector_virtual.h  filter.h  grid_intersector.h  grid_soa_intersector1.h  grid_soa_intersector_packet.h  instance.h  instance_intersector.h  intersector_epilog.h  intersector_iterators.h  object.h  object_intersector.h  primitive.h  primitive4.cpp  primitive8.cpp  quad_intersector_moeller.h  subdivpatch1_intersector.h  subgrid.h  subgrid_intersector_moeller.h  subgrid_mb_intersector.h  triangle.h  triangle_intersector.h  triangle_intersector_bw12.h  triangle_intersector_bw9.h  triangle_intersector_ds.h  triangle_intersector_hh.h  (+9 more)
tutorials/: CMakeLists.txt
tutorials/buildbench/: buildbench_device.cpp
tutorials/common/core/: ray.h
tutorials/common/image/: image.cpp
tutorials/common/lights/: point_light.cpp
tutorials/common/scenegraph/: CMakeLists.txt  geometry_creation.cpp  geometry_creation.h  obj_loader.cpp  scenegraph.cpp  scenegraph.h  xml_loader.cpp
tutorials/common/tutorial/: CMakeLists.txt  application.cpp  application.h  scene_device.cpp  tutorial.cpp  tutorial.h  tutorial_device.cpp  tutorial_device.h
tutorials/convert/: convert.cpp
tutorials/pathtracer/: pathtracer_device.cpp
tutorials/verify/: rtcore_helpers.h  verify.cpp
tutorials/viewer/: viewer.cpp  viewer_device.cpp  viewer_device.ispc
tutorials/viewer_stream/: viewer_stream_device.cpp
